# drf_ecommerce

./: README.md  db.sqlite3  main.py  pyproject.toml
apps/accounts/: managers.py  models.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/common/: managers.py  models.py
apps/profiles/: models.py  views.py
apps/profiles/migrations/: 0001_initial.py
apps/sellers/: models.py
apps/sellers/migrations/: 0001_initial.py
apps/shop/: models.py
apps/shop/migrations/: 0001_initial.py
core/: settings.py
